beauty: added overflow and fixed link-buttons(the transorming)

--- a/site/pages/beauty/beauty.css
+++ b/site/pages/beauty/beauty.css
@@ -2,6 +2,7 @@
 
 body {
     display: flex;
+    overflow: hidden;
     justify-content: center;
     align-items: center;
     
